lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/burl_append/burl_append3/burl_append3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/burl_append/burl_append3/burl_append3.c:38:17: error: use of undeclared identifier 's__b'
    burl_append(s__b ,str_str ,sz__len ,q_b__flags );
                ^
1 error generated.
